// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LinkBox /> by default matches with snapshot 1`] = `
<a
  className="sc-bdVaJa ebdoYP"
  href="#"
>
  <div
    className="k-LinkBox__link"
  >
    <div
      className="k-LinkBox__arrow"
    >
      <svg
        className=""
        fill="#222"
        height="10"
        style={
          Object {
            "transform": "rotate(90deg)",
          }
        }
        viewBox="0 0 8.48 5.64"
        width="10"
        xmlns="http://www.w3.org/2000/svg"
      >
        
        <path
          d="M0 4.24 L4.24,0 L8.48,4.24 L7.08,5.64 L4.24,2.77 L1.4,5.6 z"
        />
      </svg>
    </div>
  </div>
</a>
`;

exports[`<LinkBox /> with some props matches with snapshot 1`] = `
<a
  className="sc-bdVaJa ebdoYP"
  href="#foobar"
  rel="noopener"
  target="_blank"
>
  <div
    className="k-LinkBox__link"
  >
    <div
      className="k-LinkBox__icon"
    >
      <svg
        height={20}
        viewBox="0 0 20 20"
        width={20}
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="10"
          cy="10"
          fill="#fff"
          r="10"
        />
        <path
          d="m6 10 6-6-1.25 6h3.25l-6 6 1.25-6z"
          fill="#222"
          fillRule="evenodd"
        />
      </svg>
    </div>
    <div
      className="k-LinkBox__textContainer"
    >
      foobar
    </div>
    <div
      className="k-LinkBox__arrow"
    >
      <svg
        className=""
        fill="#222"
        height="10"
        style={
          Object {
            "transform": "rotate(90deg)",
          }
        }
        viewBox="0 0 8.48 5.64"
        width="10"
        xmlns="http://www.w3.org/2000/svg"
      >
        
        <path
          d="M0 4.24 L4.24,0 L8.48,4.24 L7.08,5.64 L4.24,2.77 L1.4,5.6 z"
        />
      </svg>
    </div>
  </div>
</a>
`;
